1.1.13i4:
    Checks & Agents:
    * hpux_if: fix missing default parameter errors
    * hpux_if: make configurable via WATO
    * if.include: fix handling of NIC with index 0

1.1.13i3:
    Core, Setup, etc.:
    * *_contactgroups lists: Single group rules are all appended. When a list
      is found as a value this first list is used exclusively. All other
      matching rules are ignored
    * cmk -d does now honor --cache and --no-tcp
    * cmk -O/-R now uses omd re{start,load} core if using OMD
    * FIX: setup.sh now setups up permissions for conf.d/wato
      correctly
    * cmk --localize update supports an optional ALIAS which is used as
      display string in the multisite GUI
    * FIX: Fixed encoding problems with umlauts in group aliases
    * FIX: honor extra_summary_host_conf (was ignored)
    * new config variable snmpv2c_hosts that allows to enable SNMP v2c
      but *not* bulkwalk (for some broken devices). bulkwalk_hosts still
      implies v2c.

    Checks & Agents:
    * Windows agent: output eventlog texts in UTF-8 encoding. This
      should fix problems with german umlauts in message texts.
    * Windows agent: Added installer for the windows agent (install_agent.exe)
    * Windows agent: Added dmi_sysinfo.bat plugin (Thanks to Arne-Nils Kromer for sharing)
    * Disabled obsolete checks fc_brocade_port and fc_brocade_port_detailed.
      Please use brocade_fcport instead.
    * aironet_errors, statgrab_disk, statgrab_net: Performance data has
      been converted from counters to rates. You might need to delete your
      existing RRDs of these checks. Sorry, but these have been that last
      checks still using counters...
    * ibm_imm_health: added last missing scan function
    * Filesystem checks: trend performance data is now normalized to MB/24h.
      If you have changed the trend range, then your historic values will
      be displayed in a wrong scale. On the other hand - from now on changes